@@ -1,6 +1,9 @@
 Revision history for Perl extension SVN::Notify::Filter::Markdown.
 
 0.05
+      - Moved the repository to
+        [GitHub](https://github.com/theory/svn-notify-filter-markdown/). Yes,
+        I'm aware of the irony.
 
 0.04  2010-10-21T18:29:20
       - Added Test::Pod to the `recommends` parameter in `Build.PL`.
